# sql-workshop

./: Dockerfile  database.py  pyproject.toml
